feat: Add OpenVidu local configuration and fix video call UI bugs

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "description": "NA App Backend with meetings, chat, and video calls",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.19.2",
