--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,6 @@
-# OS / editor
-.DS_Store
-Thumbs.db
-*.tmp
-*.log
-
-# Node / package managers
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Python
-__pycache__/
-*.pyc
-
-# OpenClaw local/runtime scratch (keep state file if needed)
-.openclaw/*.tmp
-.openclaw/*.log
-
-# Optional local secrets
+dist/
 .env
-.env.*
-!.env.example
+.vscode/
+*.db
+.idea/
